--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.navbar {
+.footer {
   display: flex;
   background: rgb(10, 30, 50);
   background: linear-gradient(
@@ -18,32 +18,9 @@
   justify-content: space-between;
   padding: 12px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
+  justify-content: center;
 }
 
 .logo {
   color: white;
-}
-
-.logged {
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-  align-items: center;
-  padding: 0px;
-}
-
-.logged .loggedUser {
-  position: relative;
-  display: inline-block;
-  color: rgb(255, 255, 255);
-  font-size: 1.25rem;
-  text-decoration: none;
-}
-
-.userImage {
-  top: 0px;
-  left: 106px;
-  width: 50px;
-  height: 50px;
-  border-radius: 100px;
 }
