--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,4 +1,35 @@
+.HomePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .header {
   display: flex;
   background-size: cover;
+  margin-bottom: 20px;
+}
+
+.Movies {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 0.5vw;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.TitleContainer{
+  font-size: 18px;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 100%;
+  background-color: #AE2121;
 }
