--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,20 +1,15 @@
 .button {
+  display: flex;
   padding: 12px 35px;
-  color: #ffffff;
   font-weight: bold;
   font-size: 12px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  background-color: #ae2121;
-  border: 2px solid #ffffff;
+  border: 2px solid transparent;
   border-radius: 8px;
   cursor: pointer;
+  background: none;
   transition: transform 80ms ease-in;
-
-  &:hover {
-    background-color: #db4242;
-    color: white;
-  }
 
   &:active {
     transform: scale(0.95);
@@ -22,6 +17,25 @@
 
   &:focus {
     outline: none;
+  }
+
+  &.filled {
+    color: #ffffff;
+    background-color: #ae2121;
+    border-color: #ffffff;
+
+    &:hover {
+      background-color: #db4242;
+      color: white;
+    }
+  }
+
+  &.text {
+    color: #ae2121;
+
+    &:hover {
+      color: #db4242;
+    }
   }
 
   /* Size de los botones */
