--- a/src/pages/LoginPage.module.css
+++ b/src/pages/LoginPage.module.css
@@ -39,3 +39,14 @@
 .inputBottom {
   margin-bottom: 20px;
 }
+
+.formGoogle {
+  display: flex;
+  margin-top: 30px;
+  gap: 10px;
+}
+
+.registroButton {
+  display: flex;
+  justify-content: center;
+}
