--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,30 +1,33 @@
 .Card {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    height: 80vh;
-    border: 2px solid #AE2121;
-    border-radius: 20px;
-    background-color: #1C3144;
-    color: #FFFFFF;
-    justify-content: center;
-    align-items: center;
-    padding: 5%;
-    margin-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 80vh;
+  box-shadow: 0 0 0 4px #ae2121 inset;
+  border-radius: 20px;
+  background: rgb(10, 30, 50);
+  background: radial-gradient(
+    circle,
+    rgba(10, 30, 50, 1) 69%,
+    rgba(4, 46, 91, 1) 100%
+  );
+  color: #ffffff;
+  justify-content: center;
+  align-items: center;
+  padding: 5%;
+  margin-bottom: 5%;
 }
 
 .Title {
-    font-size: 18px;
-    font-weight: bold;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
 }
-
 
 img {
-    width: 80%;
-    height: 80%;
-    margin-bottom: 2%;
+  width: 80%;
+  height: 80%;
+  margin-bottom: 2%;
 }
-
