--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -20,10 +20,6 @@
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
 }
 
-.logo {
-  color: white;
-}
-
 .logged {
   display: flex;
   flex-direction: row;
@@ -32,12 +28,38 @@
   padding: 0px;
 }
 
-.logged .loggedUser {
+/* .loggedUser {
   position: relative;
-  display: inline-block;
+  display: flex;
   color: rgb(255, 255, 255);
-  font-size: 1.25rem;
+  font-size: 1rem;
   text-decoration: none;
+} */
+
+.loggedUser {
+  display: flex;
+  position: relative;
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  text-decoration: none;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #ae2121;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+
+  &:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
 }
 
 .userImage {
@@ -49,6 +71,7 @@
 }
 
 .button {
+  font-size: 1rem;
   background: none;
   border: solid transparent;
   color: #ae2121;
@@ -57,4 +80,22 @@
 
 .button:hover {
   color: #db4242;
+}
+
+.logo {
+  display: flex;
+  flex-direction: row;
+}
+
+.image {
+  margin-right: 8px;
+  height: 40px;
+  width: 40px;
+  align-items: center;
+}
+
+.imageLogo {
+  margin-left: 8px;
+  height: 20px;
+  width: 20px;
 }
