--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,14 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  display: flex;
+  font-size: 1rem;
+  color: #ffffff;
   text-decoration: inherit;
+  align-items: center;
 }
 a:hover {
-  color: #535bf2;
+  color: #ffffff;
 }
 
 body {
