--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-  height: 80vh;
+  height: fit-content;
   box-shadow: 0 0 0 4px #ae2121 inset;
   border-radius: 20px;
   background: rgb(10, 30, 50);
@@ -24,10 +24,17 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 img {
   width: 80%;
-  height: 80%;
+  height: auto;
   margin-bottom: 2%;
+}
+
+.Info {
+  font-size: 12px; 
+  text-align: center;
+  margin-bottom: 5px;
 }
