--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-  height: fit-content;
+  height: 100%;
   box-shadow: 0 0 0 4px #ae2121 inset;
   border-radius: 20px;
   background: rgb(10, 30, 50);
@@ -34,7 +34,7 @@ img {
 }
 
 .Info {
-  font-size: 12px; 
+  font-size: 12px;
   text-align: center;
   margin-bottom: 5px;
 }
