--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -21,9 +21,10 @@
   justify-items: center;
   width: 100%;
   height: 100%;
+  gap: 40px;
 }
 
-.TitleContainer{
+.TitleContainer {
   font-size: 18px;
   font-weight: bold;
   align-items: center;
@@ -31,5 +32,5 @@
   margin-bottom: 10px;
   text-align: center;
   width: 100%;
-  background-color: #AE2121;
+  background-color: #ae2121;
 }
