--- a/src/pages/MovieSpecs.module.css
+++ b/src/pages/MovieSpecs.module.css
@@ -1,30 +1,100 @@
 .PrincipalContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
+  text-align: center;
+}
+
+.tilecontainer {
+  width: 100%;
+  background-color: #ae2121;
+}
+
+h1 {
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+h3 {
+  font-size: 18px;
+  margin-bottom: 20px;
+  border: #ae2121;
+}
+
+h1,h3{
+  background-color: #ae2121;
+}
+
+.Container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 20px;
+}
+
+.moviePosterContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.moviePosterContainer img {
+  width: 70%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.buttonContainer {
+  margin-top: 10px;
+  width: 100%;
+  display: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+Button {
+  width: 50%;
+  margin: 10px;
+}
+
+.movieInfoContainer {
+  flex: 1;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.runtime {
+  font-size: 16px;
+  margin-top: 0;
+}
+
+.overview {
+  margin-top: 20px;
+}
+
+.genres,
+.languages {
+  margin-top: 20px;
+  font-style: italic;
+}
+
+.actors {
+  margin-top: 20px;
+}
+
+.release {
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 600px) {
   .Container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: column;
   }
-  
-  .Container img {
-    max-width: 100%;
-    margin-right: 20px;
+
+  .movieInfoContainer {
+    margin-left: 0;
+    margin-top: 20px;
   }
-  
-  @media (max-width: 600px) {
-    .Container {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .Container img {
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-  }
-  
+}
+
   
