--- a/src/pages/MovieSpecs.module.css
+++ b/src/pages/MovieSpecs.module.css
@@ -48,7 +48,8 @@ h3 {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-top: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   width: 100%;
   justify-content: center;
   align-items: center;
