--- a/src/pages/ReservePage.module.css
+++ b/src/pages/ReservePage.module.css
@@ -9,7 +9,7 @@
 }
 
 .card {
-  margin-top: 120px;
+  margin-top: 50px;
   padding: 50px;
   padding-left: 100px;
   padding-right: 100px;
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 8px;
 }
 
@@ -42,4 +43,9 @@
 
 .separador {
   width: 1000px;
+}
+
+.precioContainer {
+  margin-bottom: 20px;
+  font-size: 0.9rem;
 }
