--- a/src/components/SeatGrid.module.css
+++ b/src/components/SeatGrid.module.css
@@ -1,37 +1,28 @@
-.seat-grid {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .seat-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.seatGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
     gap: 10px;
-    max-width: 800px; 
-  }
-  
-  .seat-row {
-    display: flex;
-    justify-content: center;
   }
   
   .seat {
-    width: 50px;
-    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: gray;
+    height: 40px;
+    background-color: green;
+    color: white;
     cursor: pointer;
-    font-weight: bold;
   }
   
-  .blue {
+  .seatGreen {
+    background-color: green;
+  }
+  
+  .seatRed {
+    background-color: red;
+  }
+  
+  .seatBlue {
     background-color: blue;
   }
   
-  .red {
-    background-color: red;
-  }
