--- a/src/pages/ProfilePage.module.css
+++ b/src/pages/ProfilePage.module.css
@@ -34,3 +34,16 @@
   width: 100%;
   background-color: #ae2121;
 }
+
+.reservations {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 0.5vw;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  width: 100%;
+  height: 100%;
+  gap: 40px;
+}
